<resources>
    <string name="app_name">Vital Signs</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="temperature">Temperature</string>
    <string name="temperature2">Temperature (°C)</string>
    <string name="pulse_rate">Pulse Rate</string>
    <string name="pulse_rate2">Pulse Rate (bpm)</string>
    <string name="spo2">SpO2</string>
    <string name="spo22">SpO2 (%)</string>
    <string name="name">Name</string>
    <string name="finish">Finish</string>
    <string name="reset">Clear</string>
    <string name="done">Done</string>
    <string name="edit">Edit</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="developer">by Franz Laconsay</string>
</resources>